cập nhật thành phần

--- a/projects/sahu/src/lib/sh-input/sh-input.component.html
+++ b/projects/sahu/src/lib/sh-input/sh-input.component.html
@@ -1,8 +1,5 @@
 <div class="field-validation">
-  <div
-    class="sh-input"
-    [attr.class]="shClass ? shClass : null"
-    #shInput>
+  <div [attr.class]="shClass ? shClass : null">
     <span class="icon" *ngIf="iconLeft" [innerHTML]="iconLeft"></span>
     <input
       value="{{value}}"
