cập nhật thành phần

--- a/projects/sahu/src/lib/sh-input/sh-input.component.scss
+++ b/projects/sahu/src/lib/sh-input/sh-input.component.scss
@@ -4,6 +4,7 @@
   border: 1px solid #e0e0e0;
   border-radius: 8px;
   display: flex;
+  height: 40px;
   transition: .3s;
 }
 
@@ -11,6 +12,7 @@ input {
   background-color: transparent;
   border: none;
   border-radius: 0;
+  height: 38px;
 }
 
 .sh-input-icon .icon {
