cập nhật thành phần

--- a/projects/sahu/styles/_sh.input.scss
+++ b/projects/sahu/styles/_sh.input.scss
@@ -1,6 +1,6 @@
 /*~.~.~.~.~.~.~.~.~.~.~.~.~.~.~. text ~.~.~.~.~.~.~.~.~.~.~.~.~.~.~.*/
 
-.sh-input {
+.sh-input-text {
   align-items: center;
   background-color: #f2f2f2;
   border: 1px solid #e0e0e0;
