--- a/projects/sahu/src/lib/sh-input/sh-input.component.html
+++ b/projects/sahu/src/lib/sh-input/sh-input.component.html
@@ -20,21 +20,32 @@
 </div>
 
 <div *ngIf="shType === 'radio'" class="field-validation">
-  <label class="sh-radio">
-    <input
-      [attr.type]="shType"
-      [attr.name]="shName ?? null"
-      [attr.id]="shId ?? null"
-      [attr.value]="shValue ?? null"
-      [attr.checked]="shChecked ? true : null"
-      [attr.data-vali]="shDataVali ?? null"
-      (change)="handleInput($event)">
-    <span class="remark"></span>
-    <span class="text">{{shLabel}}</span>
-  </label>
+  <div class="{{shClass}}">
+    <label class="sh-radio">
+      <input
+        [attr.type]="shType"
+        [attr.name]="shName ?? null"
+        [attr.id]="shId ?? null"
+        [attr.value]="shValue ?? null"
+        [attr.checked]="shChecked ? true : null"
+        [attr.data-vali]="shDataVali ?? null"
+        (change)="handleInput($event)">
+      <span class="remark"></span>
+      <span class="text">{{shLabel}}</span>
+    </label>
+  </div>
 </div>
 
 <div *ngIf="shType === 'file'" class="field-validation">
   <div class="{{shClass}}">
+    <label class="sh-file">
+      <input
+        [attr.type]="shType"
+        [attr.name]="shName ?? null"
+        [attr.id]="shId ?? null"
+        [attr.checked]="shChecked ? true : null"
+        [attr.data-vali]="shDataVali ?? null"
+        (change)="handleFileInput($event)">
+    </label>
   </div>
 </div>
