cập nhật thành phần

--- a/projects/sahu/src/lib/sh-input/sh-input.component.html
+++ b/projects/sahu/src/lib/sh-input/sh-input.component.html
@@ -36,7 +36,7 @@
   </div>
 </div>
 
-<div *ngIf="shType === 'file'" class="field-validation">
+<div *ngIf="shType === 'file'" class="field-validation" #dropZone>
   <div class="{{shClass}}">
     <label class="sh-file">
       <input
