--- a/projects/sahu/styles/_sh.input.scss
+++ b/projects/sahu/styles/_sh.input.scss
@@ -98,3 +98,104 @@
     font-weight: 500;
   }
 }
+
+.sh-file {
+  background-color: #f2f2f2;
+  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='16' ry='16' stroke='%23CEA709' stroke-width='4' stroke-dasharray='8%2c 9' stroke-dashoffset='5' stroke-linecap='round'/%3e%3c/svg%3e");
+  border-radius: 16px;
+  cursor: pointer;
+  display: flex;
+  height: 200px;
+  margin: auto;
+  max-width: 100%;
+  position: relative;
+  transition: .3s;
+  width: 320px;
+
+  input {
+    background-color: transparent;
+    cursor: pointer;
+    height: 100%;
+    left: 0;
+    opacity: 0;
+    padding: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 9;
+  }
+
+  .remark {
+    background-color: transparent;
+    color: #6b6b81;
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+    font-weight: 500;
+    gap: 7px;
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+
+    &::before {
+      background: transparent url("/assets/images/icons/ico-image.svg") no-repeat center center / 100%;
+      border: 0px solid;
+      content: "";
+      height: 62px;
+      transition: .3s;
+      width: 62px;
+    }
+
+    p {
+      margin: 0;
+    }
+  }
+
+  img {
+    border-radius: 10px;
+    filter: saturate(1.2);
+    height: 100%;
+    left: 50%;
+    object-fit: cover;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: .3s;
+    width: 100%;
+  }
+
+  button {
+    background-color: #fff;
+    border: none;
+    border-radius: 99px;
+    cursor: pointer;
+    height: 27px;
+    line-height: 1;
+    padding: 0;
+    position: absolute;
+    right: -5px;
+    top: -7px;
+    transform: scale(0);
+    transition: .3s;
+    width: 27px;
+    z-index: 10;
+  }
+
+  &.loading .remark:before {
+    animation: spin 2s infinite linear;
+    background-size: 0;
+    border-color: #ccc #CEA709 #ccc #ccc;
+    border-radius: 999px;
+    border-width: 3px;
+  }
+
+  &.active img {
+    transform: translate(-50%, -50%) scale(1);
+  }
+
+  &.active button {
+    transform: scale(1);
+  }
+}
