cập nhật thành phần

--- a/projects/sahu/styles/_sh.input.scss
+++ b/projects/sahu/styles/_sh.input.scss
@@ -38,6 +38,10 @@
   }
 }
 
+.bg_lightgray .sh-input-text input {
+  background-color: #fff;
+}
+
 /*~.~.~.~.~.~.~.~.~.~.~.~.~.~.~. radio ~.~.~.~.~.~.~.~.~.~.~.~.~.~.~.*/
 
 .sh-radio,
