cập nhật thành phần

--- a/projects/sahu/src/lib/sh-input/sh-input.component.html
+++ b/projects/sahu/src/lib/sh-input/sh-input.component.html
@@ -16,7 +16,7 @@
       (input)="handleInput($event)"
       (blur)="handleBlur()">
     <span class="icon" *ngIf="iconRight && !shLoading" [innerHTML]="iconRight"></span>
-    <span class="input-loading" *ngIf="shLoading">loading...</span>
+    <span class="input-loading" *ngIf="shLoading"></span>
   </div>
 </div>
 
