--- a/projects/sahu/styles/_sh.input.scss
+++ b/projects/sahu/styles/_sh.input.scss
@@ -30,6 +30,24 @@
     padding: 5px 10px 5px 0;
   }
 
+  .input-loading {
+    align-items: center;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    padding: 5px 10px 5px 0;
+
+    &::before {
+      animation: spin 1.5s linear infinite;
+      border: 2px solid;
+      border-color: #999 #dfdfdf #dfdfdf #dfdfdf;
+      border-radius: 99px;
+      content: "";
+      height: 16px;
+      width: 16px;
+    }
+  }
+
   &.input-focus {
     border-color: #f9cc28;
   }
