cập nhật thành phần

--- a/projects/sahu/src/lib/sh-input/sh-input.component.html
+++ b/projects/sahu/src/lib/sh-input/sh-input.component.html
@@ -53,6 +53,23 @@
   </div>
 </div>
 
+<div *ngIf="shType === 'checkbox'" class="field-validation">
+  <div class="{{shClass}}">
+    <label class="sh-checkbox">
+      <input
+        type="checkbox"
+        [attr.name]="shName ?? null"
+        [attr.id]="shId ?? null"
+        [attr.value]="shValue ?? null"
+        [attr.checked]="shChecked ? true : null"
+        [attr.data-vali]="shDataVali ?? null"
+        (change)="handleInput($event)">
+      <span class="remark"></span>
+      <span class="text" *ngIf="shLabel">{{shLabel}}</span>
+    </label>
+  </div>
+</div>
+
 <div *ngIf="shType === 'file'" class="field-validation" #dropZone>
   <div class="{{shClass}}">
     <label class="sh-file" ngClass="{{classLoading}}">
