--- a/projects/sahu/styles/_sh.input.scss
+++ b/projects/sahu/styles/_sh.input.scss
@@ -310,6 +310,7 @@
   }
 
   .file_content input {
+    cursor: pointer;
     height: 100%;
     opacity: 0;
     position: absolute;
@@ -345,5 +346,20 @@
     height: 34px;
     padding: 1px 16px 2px;
     white-space: nowrap;
+  }
+
+  &.loading .btn-primary {
+    font-size: 0;
+    padding: 1px 12px 2px;
+  }
+
+  &.loading .btn-primary::before {
+    animation: spin 2s infinite linear;
+    border: 2px solid;
+    border-color: #999 #fff #999 #999;
+    border-radius: 999px;
+    content: "";
+    height: 20px;
+    width: 20px;
   }
 }
