cập nhật thành phần

--- a/projects/sahu/src/lib/sh-select/sh-select.component.html
+++ b/projects/sahu/src/lib/sh-select/sh-select.component.html
@@ -27,7 +27,7 @@
       </div>
       <i class="dropdown-icon"></i>
 
-      <button *ngIf="inputValue && !shMultiple" type="button" class="sh-select-reset" (click)="reset($event)" class="sh-select-reset"></button>
+      <button *ngIf="inputValue && !shMultiple" type="button" class="sh-select-reset" (click)="reset($event)"></button>
     </div>
   </div>
 
