--- a/projects/sahu/src/lib/sh-message-box/sh-message-box.component.html
+++ b/projects/sahu/src/lib/sh-message-box/sh-message-box.component.html
@@ -11,7 +11,7 @@
       </div>
     </div>
     <div class="sh-message-box-footer">
-      <button class="btn-cancel" (click)="close()">Đã hiểu</button>
+      <button class="btn-cancel" (click)="close()">{{messageBox?.closeText || 'Đã hiểu'}}</button>
       <button class="btn-primary" (click)="onOkClick()" *ngIf="messageBox?.okCallback">{{messageBox?.okText}}</button>
     </div>
   </div>
