--- a/projects/sahu/src/lib/sh-select/sh-select.component.html
+++ b/projects/sahu/src/lib/sh-select/sh-select.component.html
@@ -1,4 +1,4 @@
-<div class="sh-select" [class.open]="dropdownOpen">
+<div class="sh-select" [class.open]="dropdownOpen" [class.select-disabled]="shDisabled">
   <div class="sh-select-overlay" (click)="closeDropdown()"></div>
 
   <div class="field-validation">
