--- a/projects/sahu/styles/_sh.select.scss
+++ b/projects/sahu/styles/_sh.select.scss
@@ -158,4 +158,17 @@
       transform: rotate(-45deg);
     }
   }
+
+  .results-zone {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 100%;
+  }
+}
+
+.sh-select.select-disabled {
+  cursor: not-allowed;
+  filter: brightness(.8);
+  opacity: .8;
 }
