--- a/projects/sahu/styles/_sh.select.scss
+++ b/projects/sahu/styles/_sh.select.scss
@@ -67,6 +67,7 @@
     overflow-y: auto;
     position: absolute;
     top: calc(100% + 8px);
+    transform-origin: top;
     width: 100%;
     z-index: 1000;
 
@@ -119,6 +120,7 @@
     bottom: calc(100% + 8px);
     box-shadow: 0 -11px 15px -7px rgba(0, 0, 0, .2), 0 -24px 38px 3px rgba(0, 0, 0, .14), 0 -9px 46px 8px rgba(0, 0, 0, .12);
     top: auto;
+    transform-origin: bottom;
   }
 
   .dropdown-icon {
