--- a/projects/sahu/styles/_sh.slideshow.scss
+++ b/projects/sahu/styles/_sh.slideshow.scss
@@ -114,7 +114,7 @@
     position: fixed;
     text-align: center;
     top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(0.5);
     transition: .3s;
     visibility: hidden;
     width: 80%;
@@ -123,7 +123,7 @@
 
   &.loaded .popup-content {
     opacity: 1;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(1);
     visibility: visible;
   }
 
