--- a/projects/sahu/styles/_sh.select.scss
+++ b/projects/sahu/styles/_sh.select.scss
@@ -65,6 +65,7 @@
     box-shadow: 0 11px 15px -7px rgba(0, 0, 0, .2), 0 24px 38px 3px rgba(0, 0, 0, .14), 0 9px 46px 8px rgba(0, 0, 0, .12);
     max-height: 220px;
     overflow-y: auto;
+    padding: 12px;
     position: absolute;
     top: calc(100% + 8px);
     transform-origin: top;
@@ -82,7 +83,9 @@
       label {
         align-items: center;
         display: flex;
+        gap: 18px;
         justify-content: space-between;
+        padding: 4px 0 3px;
       }
 
       input {
@@ -97,12 +100,15 @@
       }
 
       .remark {
-        background-color: #fcfcfc;
-        border: 1px solid #ccc;
-        border-radius: 3px;
-        height: 24px;
-        width: 24px;
+        background-color: transparent;
+        flex: 16px 0 0;
+        height: 16px;
+        width: 16px;
       }
+    }
+
+    input:checked~.remark {
+      background: transparent url("/assets/images/icons/others/ico-check-1.svg") no-repeat center;
     }
 
     .content-group {
@@ -113,7 +119,7 @@
       }
     }
 
-    .content-group > span {
+    .content-group>span {
       color: #008964;
       display: inline-block;
       font-size: 15px;
@@ -122,7 +128,7 @@
     }
 
     .content-group .sh-select-option {
-      padding: 5px 5px 5px 12px;
+      padding-left: 10px;
     }
 
     .loading {
@@ -188,4 +194,12 @@
   cursor: not-allowed;
   filter: brightness(.8);
   opacity: .8;
+}
+
+.sh-select-dropdown .text {
+  font-size: 14px;
+  font-weight: 400;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
