--- a/projects/sahu/styles/_sh.select.scss
+++ b/projects/sahu/styles/_sh.select.scss
@@ -64,8 +64,9 @@
     border-radius: 5px;
     box-shadow: 0 11px 15px -7px rgba(0, 0, 0, .2), 0 24px 38px 3px rgba(0, 0, 0, .14), 0 9px 46px 8px rgba(0, 0, 0, .12);
     max-height: 220px;
+    overflow-x: hidden;
     overflow-y: auto;
-    padding: 12px;
+    padding: 10px 2px;
     position: absolute;
     top: calc(100% + 8px);
     transform-origin: top;
@@ -79,18 +80,20 @@
     }
 
     &::-webkit-scrollbar-thumb {
-      background-color: #bfbfbf;
+      background-color: #c6c6c6;
       border-radius: 99px;
       transition: .3s;
     }
 
     &::-webkit-scrollbar-thumb:hover {
-      background-color: #a0a0a0;
+      background-color: #afafaf;
     }
 
     .sh-select-option {
+      border-radius: 6px;
       cursor: pointer;
       position: relative;
+      transition: .3s;
 
       &:hover {
         background-color: #f0f0f0;
@@ -99,9 +102,9 @@
       label {
         align-items: center;
         display: flex;
-        gap: 18px;
+        gap: 17px;
         justify-content: space-between;
-        padding: 4px 0 3px;
+        padding: 4px 10px;
       }
 
       input {
