cập nhật thành phần

--- a/projects/sahu/src/lib/sh-select/sh-select.component.html
+++ b/projects/sahu/src/lib/sh-select/sh-select.component.html
@@ -9,6 +9,7 @@
         [attr.id]="shId || null"
         [attr.name]="shName || null"
         [(ngModel)]="inputValue"
+        [attr.value]="inputValue"
         [attr.data-vali]="shDataVali ? shDataVali : null"
         #inputHidden />
 
