--- a/projects/sahu/src/lib/sh-select/sh-select.component.html
+++ b/projects/sahu/src/lib/sh-select/sh-select.component.html
@@ -31,7 +31,7 @@
   </div>
 
   <div class="sh-select-dropdown {{dropdownPosition}}" *ngIf="dropdownOpen" @fadeInOut>
-    <input *ngIf="shShowSearch" [placeholder]="shSearchPlaceHolder" />
+    <input *ngIf="shFilter" [attr.placeholder]="shSearchPlaceHolder" />
 
     <ng-container *ngIf="(_sData | json) != ({} | json)">
       <div class="content-group" *ngFor="let group of _sData | keyvalue">
