--- a/projects/sahu/styles/_sh.select.scss
+++ b/projects/sahu/styles/_sh.select.scss
@@ -66,7 +66,6 @@
     max-height: 220px;
     overflow-x: hidden;
     overflow-y: auto;
-    padding: 10px 2px;
     position: absolute;
     top: calc(100% + 8px);
     transform-origin: top;
@@ -131,7 +130,7 @@
     }
 
     .content-group {
-      margin-bottom: 12px;
+      margin: 10px 0 12px;
 
       &:last-child {
         margin-bottom: 0;
@@ -154,6 +153,26 @@
       padding: 20px;
       text-align: center;
     }
+  }
+
+  .select-filter {
+    background-color: #efefef;
+    padding: 10px;
+    position: sticky;
+    top: 0;
+    z-index: 9;
+
+    input {
+      border-color: #c6c6c6;
+      border-radius: 5px;
+      font-size: 14px;
+      font-weight: 400;
+      height: 34px;
+    }
+  }
+
+  .content-single {
+    padding: 10px 5px;
   }
 
   .sh-select-dropdown.top {
