--- a/projects/sahu/styles/_sh.input.scss
+++ b/projects/sahu/styles/_sh.input.scss
@@ -6,15 +6,13 @@
   border: 1px solid #e0e0e0;
   border-radius: 8px;
   display: flex;
-  height: 40px;
   overflow: hidden;
   transition: .3s;
 
   input {
     background-color: transparent;
     border: none;
-    border-radius: 0;
-    height: 38px;
+    border-radius: 8px;
   }
 
   &.sh-input-icon .icon {
@@ -54,6 +52,53 @@
 
   &.input-focus .icon {
     color: #f9cc28;
+  }
+}
+
+.input-xs {
+  height: 28px;
+
+  input {
+    font-size: 13px;
+    height: 26px;
+  }
+}
+
+.input-sm {
+  height: 32px;
+
+  input {
+    font-size: 14px;
+    height: 30px;
+  }
+}
+
+.input-md {
+  height: 36px;
+
+  input {
+    font-size: 15px;
+    height: 34px;
+  }
+}
+
+.input-lg {
+  height: 40px;
+
+  input {
+    font-size: 16px;
+    font-weight: 500;
+    height: 38px;
+  }
+}
+
+.input-xl {
+  height: 48px;
+
+  input {
+    font-size: 16px;
+    font-weight: 500;
+    height: 46px;
   }
 }
 
