cập nhật thành phần

--- a/projects/sahu/styles/_sh.input.scss
+++ b/projects/sahu/styles/_sh.input.scss
@@ -62,6 +62,10 @@
     font-size: 13px;
     height: 26px;
   }
+
+  .icon {
+    font-size: 13px;
+  }
 }
 
 .input-sm {
@@ -71,6 +75,10 @@
     font-size: 14px;
     height: 30px;
   }
+
+  .icon {
+    font-size: 14px;
+  }
 }
 
 .input-md {
@@ -79,6 +87,10 @@
   input {
     font-size: 15px;
     height: 34px;
+  }
+
+  .icon {
+    font-size: 15px;
   }
 }
 
@@ -90,6 +102,10 @@
     font-weight: 500;
     height: 38px;
   }
+
+  .icon {
+    font-size: 16px;
+  }
 }
 
 .input-xl {
@@ -99,6 +115,10 @@
     font-size: 16px;
     font-weight: 500;
     height: 46px;
+  }
+
+  .icon {
+    font-size: 16px;
   }
 }
 
